# cmake_example

./: CMakeLists.txt  README
main/: Main.cpp
src/: Math.cpp  Math.h
test/: Test_Addition.cpp
